apigw/istio_jwt_auth.yaml
---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: "jwt-auth"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules: # Включаем фильтр для анализа JWT токена
    - issuer: "http://auth-service"
#      jwksUri: "http://auth-service.otus-msa-hw5.svc.cluster.local/.well-known/jwks.json"
      forwardOriginalToken: true
      outputPayloadToHeader: "x-jwt-token"
      fromHeaders:
        - name: "remember_token"

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "require-jwt"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: ALLOW
  rules:
    - to:
        - operation:
            paths: ["/login*"] # Разрешаем доступ к /login всем запросам
    - to:
        - operation:
            paths: ["/signup*"]
    - from:
        - source:
            requestPrincipals: [ "*" ] # Запрещаем доступ к остальным ресурсам для запросов без JWT
